--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 !/apache-tomcat*/conf
 !/apache-tomcat*/conf/server.xml
 !/apache-tomcat*/conf/certs
-!/apache-tomcat*/conf/certs/*.jks
+!/apache-tomcat*/conf/certs/server.jks
 .idea
 target
 *.zip
